[package]
description = "Parity executive"
homepage = "http://parity.io"
license = "GPL-3.0"
name = "executive"
version = "1.7.0"
authors = ["Parity Technologies <admin@parity.io>"]

[build-dependencies]
"ethcore-ipc-codegen" = { path = "../ipc/codegen" }

[dependencies]
crossbeam = "0.2.9"
ethcore-io = { path = "../util/io" }
ethcore-ipc = { path = "../ipc/rpc" }
ethcore = { path = "../ethcore" }
ethcore-util = { path = "../util" }
ethstore = { path = "../ethstore" }
lazy_static = "0.2"
log = "0.3"
rlp = { path = "../util/rlp" }
