[package]
description = "Parity externalities"
homepage = "http://parity.io"
license = "GPL-3.0"
name = "parity-externalities"
version = "1.7.0"
authors = ["Parity Technologies <admin@parity.io>"]

[build-dependencies]
"ethcore-ipc-codegen" = { path = "../ipc/codegen" }

[dependencies]
ethcore = { path = "../ethcore" }
executive = { path = "../executive" }
ethcore-util = { path = "../util" }
log = "0.3"
